force-app/main/default/objects/ResultadoAvaliacao__c/ResultadoAvaliacao__c.object-meta.xml
<CustomObject>
    <label>Resultado da avaliação</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resultados das avaliações</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>