force-app/main/default/objects/ResultadoAvaliacao__c/fields/Aluno__c.field-meta.xml
<CustomField>
    <fullName>Aluno__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aluno</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Resultados das avaliações</relationshipLabel>
    <relationshipName>ResultadosAvaliacoes</relationshipName>
    <type>Lookup</type>
</CustomField>