force-app/main/default/objects/ResultadoAvaliacao__c/fields/Conceito__c.field-meta.xml
<CustomField>
    <fullName>Conceito__c</fullName>
    <formula>IF(  ISPICKVAL(TipoAvaliacao__c , &quot;Técnica&quot;) ,
 
  (IF(TotalPontos__c &gt;=15.1, &quot;Ótimo&quot;, 
   IF(TotalPontos__c &gt;=12.1, &quot;Muito Bom&quot;,  
   IF(TotalPontos__c &gt;=9.1, &quot;Bom&quot;,  
   IF(TotalPontos__c &gt;=4.1, &quot;Regular&quot;,&quot;Ruim&quot;))))),

 (IF(TotalPontos__c &gt;=30.1, &quot;Ótimo&quot;,
 IF(TotalPontos__c &gt;=24.1, &quot;Muito Bom&quot;,
 IF(TotalPontos__c &gt;=18.1, &quot;Bom&quot;,
 IF(TotalPontos__c &gt;=12.1, &quot;Regular&quot;,&quot;Ruim&quot;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conceito</label>
    <type>Text</type>
</CustomField>