force-app/main/default/objects/ResultadoAvaliacao__c/fields/PercentualDesempenho__c.field-meta.xml
<CustomField>
    <fullName>PercentualDesempenho__c</fullName>
    <formula>IF(
  ISPICKVAL(TipoAvaliacao__c , &quot;Técnica&quot;) , (TotalPontos__c /18), (TotalPontos__c /36))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% desempenho</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>