force-app/main/default/objects/ResultadoAvaliacao__c/fields/TipoAvaliacao__c.field-meta.xml
<CustomField>
    <fullName>TipoAvaliacao__c</fullName>
    <label>Tipo de avaliação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Técnica</fullName>
            </value>
            <value>
                <fullName>Socioemocional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>