force-app/main/default/objects/ResultadoAvaliacao__c/fields/TotalPontos__c.field-meta.xml
<CustomField>
    <fullName>TotalPontos__c</fullName>
    <label>Total de pontos</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>