force-app/main/default/objects/ResultadoAvaliacao__c/fields/Turma__c.field-meta.xml
<CustomField>
    <fullName>Turma__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Turma</label>
    <referenceTo>Turma__c</referenceTo>
    <relationshipName>ResultadosAvaliacoes</relationshipName>
    <type>Lookup</type>
</CustomField>